[metadata]
name = aws-portknock
version = 0.1.2
url = https://github.com/michel-slm/aws-portknock
author = Michel Lind
author_email = michel@michel-slm.name
description = Port knocking for AWS security groups
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
  Development Status :: 4 - Beta
  Environment :: Console
  License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)
  Topic :: Security
  Topic :: Utilities
keywords = aws portknock

[options]
py_modules = aws_portknock
install_requires =
  boto3
  click

[options.entry_points]
console_scripts =
  aws-portknock = aws_portknock:cli
